# AlephCITesting

./: .clang-format  CMakeLists.txt  conanfile.py
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/actions/setup-conan/: action.yml
.github/adtions/setup-conan/: action.yml
.github/requirements/: conan.txt
.github/workflows/: build.yml  clusterfuzzlite.yml
chess/: CMakeLists.txt
chess/include/aleph/: chess.hpp
chess/include/aleph/chess/: attack_tables.hpp  board.hpp  board.inl  move.hpp  move_list.hpp  piece.hpp  square.hpp  zobrist.hpp
chess/include/aleph/chess/board/: fen.inl  metadata.inl  movegen.inl  mutable.inl  push.inl  ray_helpers.inl
chess/tests/: CMakeLists.txt  bench_board.cpp  bench_perft.cpp  fuzz_board_constructor.cpp  fuzz_board_push.cpp  test_board.cpp  test_move.cpp  test_move_list.cpp  test_piece.cpp  test_square.cpp
chess/tools/: table_builder.py
cmake/: test_macros.cmake
docs/: conf.py  requirements.txt
docs/old/architecture/: data-flow.md  index.md
docs/old/subsystems/: index.md
docs/src/: index.md
docs/src/developer/: building.md
docs/src/developer/adr/: 0001-immutable-chess-objects.md  0002-search-contempt-mcts.md  0003-cross-attention-transformer.md  0004-feed-forward-network-removal.md  0005-smolgen.md  0006-activation-function.md  0007-sprt-network-promotion.md  0008-supervised-pretraining.md  index.md
platform/: CMakeLists.txt
platform/include/aleph/: platform.hpp
platform/include/aleph/platform/: allocation.hpp  compiler.hpp  intrinsics.hpp  log_info.hpp
platform/include/aleph/platform/allocation/: init.hpp  init.inl  runtime.hpp  runtime.inl
platform/tests/: CMakeLists.txt  test_allocation.cpp
